objects/Puresuccess_audit_log__c.object
<CustomObject>
    <fields>
        <fullName>Errortype__c</fullName>
        <label>Errortype</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stacktrace__c</fullName>
        <label>Stacktrace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Token_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Token Allocation</label>
        <referenceTo>Token_Allocations__c</referenceTo>
        <relationshipLabel>Puresuccess_package_audit_logs</relationshipLabel>
        <relationshipName>Puresuccess_package_audit_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Puresuccess package</fullName>
                </value>
                <value>
                    <fullName>Subscription token</fullName>
                </value>
                <value>
                    <fullName>Gutraining units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>puresuccess_package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>puresuccess package</label>
        <referenceTo>Puresuccess_audit_log__c</referenceTo>
        <relationshipLabel>Puresuccess_package_audit_logs</relationshipLabel>
        <relationshipName>Puresuccess_package_audit_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Puresuccess_package_audit_log</label>
    <nameField>
        <label>Puresuccess_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Puresuccess_package_audit_logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>